# roots

./: .gitignore  CMakeLists.txt  README.md  akiti.h  akititest.cpp  helper.h  main.cpp  roots.h  rootstest.cpp  rpoly.h  rpolystub.h  rpolytest.cpp
